[package]

name = "myprogbsp"
version = "0.7.3"
authors = [ "Christoph Burgdorf <christoph@thoughtram.io>",
            "Kevin Butler <haqkrs@gmail.com>",
            "Simon Persson <simon@flaskpost.org>" ]
description = "An express.js inspired web framework"
license = "MIT"

repository = "https://github.com/nickel-org/nickel.rs"
readme = "README.md"
keywords = ["nickel", "server", "web", "express"]


[[bin]]
name = "myprog"
path =  "src/myprog.rs"

[features]
unstable = ["hyper/nightly", "compiletest_rs"]
ssl = ["hyper/ssl"]
timeouts = ["hyper/timeouts"]
default = ["timeouts"]

[dependencies]
url = "0.2"
time = "0.1"
typemap = "0.3"
plugin = "0.2"
regex = "0.1"
rustc-serialize = "0.3"
log = "0.3"
groupable = "0.2"
mustache = "0.6"
lazy_static = "0.1"
modifier = "0.1"
nickel ="*"

[dependencies.hyper]
version = "=0.6"
default-features = false

[dependencies.compiletest_rs]
version = "*"
optional = true


