[package]

name = "myprogram"
version = "0.1.1"
authors = ["robisys"]
repository = "https://github.com/robisys/myprog"
readme = "README.md"
keywords = ["nickel", "server", "web", "express"]

#authors = [ "Christoph Burgdorf <christoph@thoughtram.io>",
#            "Kevin Butler <haqkrs@gmail.com>",
#            "Simon Persson <simon@flaskpost.org>" ]
description = "An express.js inspired web framework"
license = "MIT"
#repository = "https://github.com/nickel-org/nickel.rs"



[[bin]]
name = "myprog"
path =  "src/myprog.rs"

[features]
unstable = ["hyper/nightly", "compiletest_rs"]
ssl = ["hyper/ssl"]
timeouts = ["hyper/timeouts"]
default = ["timeouts"]

[dependencies]
url = "0.2"
time = "0.1"
typemap = "0.3"
plugin = "0.2"
regex = "0.1"
rustc-serialize = "0.3"
log = "0.3"
groupable = "0.2"
mustache = "0.6"
lazy_static = "0.1"
modifier = "0.1"
nickel ="0.7.3"

[lib]
name = "pdoc1"
path = "src/pdoc-1.rs"

[dependencies.hyper]
version = "0.6"
default-features = false

[dependencies.compiletest_rs]
version = "0.0.11"
optional = true


